--- a/angular-ngrx-spotify/package.json
+++ b/angular-ngrx-spotify/package.json
@@ -22,9 +22,6 @@
     "@angular/platform-browser-dynamic": "^18.1.0",
     "@angular/router": "^18.1.0",
     "@ngrx/store": "^18.0.1",
-    "@ngrx/store-devtools": "^18.0.1",
-    "buffer": "^6.0.3",
-    "husky": "^9.1.1",
     "ngrx-store-localstorage": "^18.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -42,6 +39,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "@ngrx/store-devtools": "^18.0.1"
   }
 }
