--- a/angular-ngrx-spotify/angular.json
+++ b/angular-ngrx-spotify/angular.json
@@ -76,6 +76,7 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
+            "codeCoverage": true,
             "polyfills": [
               "zone.js",
               "zone.js/testing"
@@ -83,10 +84,8 @@
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              {
-                "glob": "**/*",
-                "input": "public"
-              }
+              "src/assets/images",
+              "src/assets/icons"
             ],
             "styles": [
               "src/styles.scss"
